Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47067

QtQuick.Controls not deployed on OS X

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9
    • 5.5.0
    • None
    • macOS

      QtQuick.Controls module is not deployed on OS X Qt 5.5.0 using macdeploy qt.

      The app tries to deploy it as seen from debug log:

          Log: Deploying QML import "QtQuick.Controls"
      

        For Gerrit Dashboard: QTBUG-47067
        # Subject Branch Project Status CR V

            sorvig Morten Sørvig
            ntadej Tadej Novak
            Votes:
            1 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes