macdeployqt sort QML modules before deploying them

Sorting QML modules makes sure a module is deployed before its sub-modules,
avoiding the problem where macdeployqt would consider a module as deployed
because one of its sub-module has already been deployed.

Task-number: QTBUG-47067
Change-Id: I0ab8dd827fcd6eea0f0573157101ceb8f1a045fc
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>